[GTK][WPE] Check GApplication has a valid ID before trying to create the flatpack info https://bugs.webkit.org/show_bug.cgi?id=227344

Reviewed by Michael Catanzaro.

Show a warning if GApplication is used but app ID is nullptr.

* UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::createFlatpakInfo):

Canonical link: https://commits.webkit.org/239235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279369 268f45cc-cd09-0410-ab3c-d52691b4dbfc